--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ body {
   }
 }
 
+
 .card {
   padding: 2em;
 }
@@ -95,9 +96,37 @@ body {
   text-align: center;
 }
 
+.circle {
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.red-circle {
+  background-color: red;
+}
+
+.green-circle {
+  background-color: green;
+}
+
+
 /* Media query for desktop layout */
 @media (min-width: 768px) {
+  
+  .status-text {
+    display: inline;
+  }
 
+  .circle {
+    display: none; /* Hide circles on mobile */
+  }
+  .status-text {
+    display: inline; /* Keep status text visible */
+  }
+  
   .btn-view-desktop {
     display: inline-block;
     /* shows this element on desktop */
@@ -131,6 +160,13 @@ body {
 
 /* Media query for mobile layout */
 @media (max-width: 768px) {
+
+  circle {
+    display: inline-block; /* Show circles on desktop */
+  }
+  .status-text {
+    display: none; /* Keep status text visible */
+  }
 
   td,
   th {
@@ -196,8 +232,17 @@ body {
     display: inline-block;
     /* shows this element on mobile */
   }
-}
 
+  table {
+    table-layout: fixed;
+  }
+  /* Forces consistent column widths */
+  .hide-on-mobile {
+  display: none;
+  } /* Hides elements on mobile */
+
+ /* Close @media (max-width: 768px) */
+}
 /* Additional media query for mobile menu, with different breakpoint for now */
 @media (max-width: 992px) {
   .navbar-collapse {
