--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,12 @@
-body {
-  margin: 0;
-  padding-top: 56px;
-}
-
-#root {
-  min-height: 100vh;
-}
-
+html,
+body,
+#root,
 .App {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /*
@@ -20,6 +17,19 @@ body {
   align-items: center;
 }
 */
+
+.navbar-collapse {
+  transition: max-height 0.3s ease-in-out;
+  overflow: hidden;
+}
+
+
+.dropdown-menu {
+  min-width: 150px;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
 
 /* New purple bar styles */
 .purple-bar {
